--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,15 +1,16 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "author": "Michał Ambrożewicz",
+  "short_name": "Fit Calculator",
+  "name": "Fit Calculator React",
   "icons": [
     {
-      "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
+      "src": "/logo.png",
+      "type": "png",
+      "sizes": "192x192"
     }
   ],
   "start_url": ".",
   "display": "standalone",
-  "theme_color": "#000000",
-  "background_color": "#ffffff"
+  "theme_color": "#34ace0",
+  "background_color": "#34ace0"
 }
