--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,7 @@
   "name": "Fit Calculator React",
   "icons": [
     {
-      "src": "/logo.png",
+      "src": "logo.png",
       "type": "png",
       "sizes": "192x192"
     }
